--- a/Week 1/Opdrachten_Week1/app/src/main/res/layout/activity_main.xml
+++ b/Week 1/Opdrachten_Week1/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.android.orlandosmits.opdrachten_week1.MainActivity">
+    android:layout_height="match_parent" >
 
-    <TextView
-        android:text="Hello World!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+
+        android:id="@+id/imageViewLightBlue"
+        android:background="@android:color/holo_blue_light"/>
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+
+        android:id="@+id/imageViewDarkBlue"
+        android:background="@android:color/holo_blue_dark"
+        android:layout_below="@+id/imageViewLightBlue"/>
+
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="100dp"
+
+        android:id="@+id/imageViewDarkOrange"
+        android:background="@android:color/holo_orange_dark"
+        android:layout_below="@id/imageViewDarkBlue"/>
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="100dp"
+
+        android:id="@+id/imageViewLightOrange"
+        android:background="@android:color/holo_orange_light"
+        android:layout_below="@id/imageViewDarkBlue"
+        android:layout_toRightOf="@id/imageViewDarkOrange"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+
+        android:id="@+id/imageViewPurple"
+        android:background="@android:color/holo_purple"
+        android:layout_below="@id/imageViewDarkBlue"
+        android:layout_toRightOf="@id/imageViewLightOrange"/>
+
 </RelativeLayout>
