--- a/ContactApp/app/src/main/res/layout/activity_main.xml
+++ b/ContactApp/app/src/main/res/layout/activity_main.xml
@@ -14,15 +14,16 @@
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
-        android:src="@drawable/placeholderpf"
+        android:src="@drawable/roundprofileborder"
         />
 
     <TextView
+        android:id="@+id/personname"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/profilepicture"
-        android:text="Jose Kempen"
+        android:text="Panne Koek"
 
         />
     </RelativeLayout>
