--- a/ContactApp/app/src/main/res/layout/activity_main.xml
+++ b/ContactApp/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <ImageView
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@drawable/blueskyheader"
-        android:id="@+id/homepageheader"/>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:id="@+id/profilepicture"
-        android:layout_height="150dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
-        android:src="@drawable/roundprofileborder"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/userListView"
+        android:layout_gravity="center_horizontal"
         />
-
-    <TextView
-        android:id="@+id/personname"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/profilepicture"
-        android:text="Panne Koek"
-
-        />
-    </RelativeLayout>
+</LinearLayout>
