--- a/ContactApp/app/src/main/res/menu/menu.xml
+++ b/ContactApp/app/src/main/res/menu/menu.xml
@@ -9,8 +9,8 @@
         app:showAsAction="ifRoom"/>
 
     <!-- Settings, should always be in the overflow -->
-    <item android:id="@+id/action_settings"
-        android:title="Settings"
+    <item android:id="@+id/action_deleteDB"
+        android:title="Remove Database"
         app:showAsAction="never"/>
 
 </menu>
