Fixed some layout issues

--- a/ContactApp/app/src/main/res/layout/activity_detail.xml
+++ b/ContactApp/app/src/main/res/layout/activity_detail.xml
@@ -9,14 +9,24 @@
         android:background="@drawable/blueskyheader"
         android:id="@+id/homepageheader"/>
 
-    <ImageView
-        android:layout_width="match_parent"
+    <!--<ImageView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:id="@+id/profilepicture"-->
+        <!--android:layout_height="150dp"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="70dp"-->
+        <!--android:src="@drawable/roundprofileborder"-->
+        <!--/>-->
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profilepicture"
+        android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
-        android:src="@drawable/roundprofileborder"
-        />
+        app:civ_border_width="1dp"
+        app:civ_border_color="#FF000000"/>
 
     <TextView
         android:id="@+id/tvPersonName"
