--- a/ContactApp/app/src/main/res/layout/listview_row.xml
+++ b/ContactApp/app/src/main/res/layout/listview_row.xml
@@ -5,12 +5,13 @@
     android:layout_height="100dp"
     android:background="@android:color/holo_blue_light">
 
-    <ImageView
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/thumbPF"
-        android:background="@android:color/holo_blue_dark"
-        android:layout_margin="12.5dp" />
+        android:layout_width="75dp"
+        android:layout_height="match_parent"
+        app:civ_border_width="1dp"
+        app:civ_border_color="#FF000000"/>
 
     <LinearLayout
         android:orientation="vertical"
