--- a/ContactApp/app/src/main/res/layout/listview_row.xml
+++ b/ContactApp/app/src/main/res/layout/listview_row.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:background="@android:color/holo_blue_light">
+    android:layout_height="150dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
